--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Khanh Van Ba</title>
 </head>
 <body>
-    <embed src="Khanh_Van Ba_Resume_25-03-2021-09-23-33.pdf" style="width: 100%; height: 100%; border: none;" />
+    <embed src="Khanh_Van Ba_Resume_25-03-2021-09-23-33.pdf" type="application/pdf" style="width: 100%; height: 100vh; border: none;" />
 </body>
 </html>
