--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khanh Van Ba</title>
 </head>
-<body>
+<body style="margin: 0;">
     <embed src="Khanh_Van Ba_Resume_25-03-2021-09-23-33.pdf" type="application/pdf" style="width: 100%; height: 100vh; border: none;" />
 </body>
 </html>
