--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Khanh Van Ba</title>
+    <title>Khanh Van Ba - Resume</title>
 </head>
 <body style="margin: 0; overflow: hidden">
     <embed src="Khanh_Van Ba_Resume_08-07-2021-19-29-28.pdf" type="application/pdf" style="width: 100%; height: 100vh; border: none;" />
