--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khanh Van Ba - Resume</title>
 </head>
-<body style="margin: 0; overflow: hidden">
-    <embed src="Khanh_Van Ba_Resume_08-07-2021-20-34-50.pdf" type="application/pdf" style="width: 100%; height: 100vh; border: none;" />
+<body>
+    <script>
+        window.location.href = '/resume.pdf';
+    </script>
 </body>
 </html>
