--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        window.location.href = '/resume.pdf';
+        window.location.href = '/Khanh_Van_Ba _Resume.pdf';
     </script>
 </body>
 </html>
